--- a/src/app/memory/memory.component.html
+++ b/src/app/memory/memory.component.html
@@ -1,15 +1,16 @@
 <div class="main">
 
+    <h1 class="heading">{{title[languageNumber-1]}}</h1>
     <div class="before" *ngIf="!start">
 
-        <p>Skirtingų elementų kiekis: {{maxUsedClasses}} </p>
+        <p>{{element[languageNumber-1]}}: {{maxUsedClasses}} </p>
         <div class="mygtukai">
-            <div class="didinamMazinam">
-                <button class="padidinti" (click)=usedClases(1)>Padidinti</button>
-                <button (click)=usedClases(-1)>Sumazinti</button>
+            <div>
+                <button (click)=usedClases(-1)>{{less[languageNumber-1]}}</button>
+                <button (click)=usedClases(1)>{{more[languageNumber-1]}}</button>
             </div>
             <div>
-                <button (click)=starting()>Pradedam</button>
+                <button (click)=starting()>{{startText[languageNumber-1]}}</button>
             </div>
         </div>
 
@@ -17,17 +18,20 @@
     </div>
     <div class="before" *ngIf="start">
         <div class="game">
-            <div [ngStyle]="{'flex':maxUsedClasses%2==0&&maxUsedClasses<16?'25%':(maxUsedClasses%3==0&&maxUsedClasses<22)?'16.6%':(maxUsedClasses%4==0&&maxUsedClasses<61)?'12.5%':(maxUsedClasses%5==0&&maxUsedClasses<44)?'20%':'1'}" class="flexed" *ngFor="let x of shuffledCards, let ind=index">
+            <div [ngStyle]="{'flex':maxUsedClasses%2==0&&maxUsedClasses<16?'25%':(maxUsedClasses%3==0&&maxUsedClasses<22)?'16.3%':(maxUsedClasses%4==0&&maxUsedClasses<61)?'12.5%':(maxUsedClasses%5==0&&maxUsedClasses<44)?'20%':'1'}" class="flexed" *ngFor="let x of shuffledCards, let ind=index">
                 <div (click)=flip(ind) [className]="x.open ? x.className : 'full'">
 
                 </div>
             </div>
         </div>
-        <button (click)=restarting()>Is naujo</button>
+        <button (click)=restarting()>{{restart[languageNumber-1]}}</button>
     </div>
 
     <div *ngIf="victory" class="before">
-        <p>Laimejote (bus nuolaida {{maxUsedClasses}})%</p>
+        <div>
+            <p class="victory">{{win[languageNumber-1]}} </p>
+        </div>
+
 
     </div>
 </div>
