--- a/src/app/kontaktai/kontaktai.component.html
+++ b/src/app/kontaktai/kontaktai.component.html
@@ -1,44 +1,18 @@
 <div class="container">
+
     <div>
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.15830869428!2d-74.119763973046!3d40.69766374874431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNiujorkas%2C%20Jungtin%C4%97s%20Valstijos!5e0!3m2!1slt!2slt!4v1634575465570!5m2!1slt!2slt"
-            width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
-        <hr />
-        <ul class="listItem">
-            <li>716-282-9729</li>
-            <li>
-                <a>testas@testas.ly</a>
-            </li>
-            <li>7054 Ridge Dr. Brooklyn, NY 11228</li>
-            <li>Brooklyn</li>
-            <li>Darbo laikas: I-V 12:00 - 12:01</li>
-        </ul>
-    </div>
-    <div>
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423283.43554989767!2d-118.69191546801642!3d34.02073049790668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20And%C5%BEelas%2C%20Kalifornija%2C%20Jungtin%C4%97s%20Valstijos!5e0!3m2!1slt!2slt!4v1634575629874!5m2!1slt!2slt"
-            width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
-        <hr />
-        <ul class="listItem">
-            <li>323-577-6580</li>
-            <li>
-                <a _ngcontent-siq-c68="">testas2@testas2.ly</a>
-            </li>
-            <li>909-1/2 E 49th St. Los Angeles, California</li>
-            <li>Los Angeles</li>
-            <li>Darbo laikas: I-V 11:00 - 11:01</li>
-        </ul>
-    </div>
-    <div>
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2294.227814527308!2d23.88321771589755!3d54.898923580333665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e72205aa4de41f%3A0x7f361f52f2ba980b!2sKaunas%20Castle!5e0!3m2!1sen!2slt!4v1643462699858!5m2!1sen!2slt"
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2292.759080710528!2d23.928681016022132!3d54.92469966301828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e718c1ca53efe9%3A0x8ce9088fef59a698!2sSukil%C4%97li%C5%B3%20pr.%2076%2C%20Kaunas%2049336!5e0!3m2!1slt!2slt!4v1644066285524!5m2!1slt!2slt"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        <hr />
+        <hr>
         <ul class="listItem">
-            <li>+370 612 45678</li>
+
+            <li>Tel: +370 643 48590</li>
             <li>
-                <a _ngcontent-siq-c68="" href="mailto:labadaba@gmail.com?subject=Starting project more info">manoPastas@pastas.mano</a>
+                <a _ngcontent-siq-c68="" href="mailto:labadaba@gmail.com?subject=Starting project more info">cernauskienezivile@gmail.com</a>
             </li>
             <li>Sukilėlių pr. 76</li>
             <li>Kaunas</li>
-            <li>Darbo laikas: I-V 10:00 - 10:01</li>
+
         </ul>
     </div>
 </div>
