--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,9 +1,10 @@
 <div class="container">
-    <div class="title">
-        <h1>{{h1[languageNumber-1]}}</h1>
+    <div class="curved-text">
+        <p class="classText"></p>
+        <!-- <h1 class="title">{{h1[languageNumber-1]}}</h1> -->
     </div>
     <div class="link">
-        <a href="https://lt-lt.facebook.com/zivile.cernauskiene.5">{{h2[languageNumber-1]}}</a>
+        <a target="_blank" href="https://zivile.netlify.app/">{{h2[languageNumber-1]}}</a>
     </div>
 
 </div>
