--- a/src/app/kontaktai/kontaktai.component.css
+++ b/src/app/kontaktai/kontaktai.component.css
@@ -22,9 +22,10 @@ footer {
 }
 
 .map {
-    height: 300px;
-    width: 300px;
+    height: 600px;
+    width: 600px;
     border-radius: 5px;
+    border: 10px black solid;
 }
 
 hr {
