--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,10 +1,14 @@
 <div class="container">
-    <div class="curved-text">
+    <img [src]="img[languageNumber-1]" alt="">
+    <a href="https://zivile.netlify.app/"> <button class="button">{{h2[languageNumber-1]}}</button></a>
+
+</div>
+
+
+<!-- <div class="curved-text">
         <p class="classText"></p>
-        <!-- <h1 class="title">{{h1[languageNumber-1]}}</h1> -->
+        <h1 class="title">{{h1[languageNumber-1]}}</h1>
     </div>
     <div class="link">
         <a target="_blank" href="https://zivile.netlify.app/">{{h2[languageNumber-1]}}</a>
-    </div>
-
-</div>
+    </div> -->
