--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,14 +1,15 @@
 <div class="container">
     <img [src]="img[languageNumber-1]" alt="">
-    <a href="https://zivile.netlify.app/"> <button class="button">{{h2[languageNumber-1]}}</button></a>
+    <a href="https://zivile.netlify.app/" target="_blank"> <button class="button">{{h2[languageNumber-1]}}</button></a>
 
 </div>
 
 
-<!-- <div class="curved-text">
-        <p class="classText"></p>
-        <h1 class="title">{{h1[languageNumber-1]}}</h1>
+<div class="section">
+    <div class="carousel-container">
+        <div class="carousel">
+            <img class="img" [src]="images[slideIndex-1]" alt="">
+            <p class="text">{{text[slideIndex-1]}}</p>
+        </div>
     </div>
-    <div class="link">
-        <a target="_blank" href="https://zivile.netlify.app/">{{h2[languageNumber-1]}}</a>
-    </div> -->
+</div>
