--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,11 +5,11 @@
 </div>
 
 
-<div class="section">
+<!-- <div class="section">
     <div class="carousel-container">
         <div class="carousel">
             <img class="img" [src]="images[slideIndex-1]" alt="">
             <p class="text">{{text[slideIndex-1]}}</p>
         </div>
     </div>
-</div>
+</div> -->
