--- a/src/app/notepad/notepad.component.css
+++ b/src/app/notepad/notepad.component.css
@@ -45,13 +45,15 @@
     justify-content: space-between;
     align-items: center;
     z-index: 1000;
+    padding: 5px;
 }
 
 .modal-checkbox {
     display: flex;
-    width: 100%;
+    width: 50%;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-around;
+    padding: 20px;
 }
 
 .modal-buttons {
