delete in Modal
added deletion in Modal
added last update in Main

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,6 +3,9 @@
     <a href="https://zivile.netlify.app/" target="_blank"> <button class="button">{{h2[languageNumber-1]}}</button></a>
 
 </div>
+<div class="lastUpdate">
+    <p>Last updated in 2022-02-14</p>
+</div>
 
 
 <!-- <div class="section">
