--- a/src/app/notepad/notepad.component.html
+++ b/src/app/notepad/notepad.component.html
@@ -68,7 +68,8 @@
         <p>saugomas tekstas: {{modaltext}}</p>
         <div class="modal-buttons">
             <button (click)="modalSave()">saugoti1</button>
-            <button (click)="modalExit()">nesaugoti nieko</button>
+            <button (click)="modalExit()">grizti</button>
+            <button (click)="modalDelete()">iseiti neissaugojus</button>
         </div>
 
     </div>
